started building the navbar, gave the navbar a background color and added a link to the 'My Books' to link to the sign up page for now

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "chistev stephenowabie@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2"
   }
 }
