--- a/package.json
+++ b/package.json
@@ -23,9 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.3",
-    "node-fetch": "^3.3.2",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.5",
