--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.3",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "sanitize-html": "^2.13.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.5",
