--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "crypto": "^1.0.1",
     "csrf": "^3.1.0",
     "csurf": "^1.11.0",
+    "dompurify": "^3.1.3",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "jsdom": "^24.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.5.0",
