Converted the HTML structure in the account_settings.ejs file to use semantic HTML elements for better accessibility and structure; Updated the EJS template for the account_settings page to display error messages if they exist;Updated the /upload_profile_photo route to handle the scenario where a user does not upload any file when updating their profile photo.

--- a/package.json
+++ b/package.json
@@ -36,8 +36,21 @@
   "devDependencies": {
     "@babel/cli": "^7.24.5",
     "@babel/core": "^7.24.5",
-    "@babel/preset-env": "^7.24.5",
-    "@babel/register": "^7.23.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/register": "^7.24.6",
     "jest": "^29.7.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "mjs"
+    ],
+    "testMatch": [
+    "**/__tests__/**/*.mjs",
+    "**/?(*.)+(spec|test).mjs"
+  ],
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   }
 }
