--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
+    "helmet": "^7.1.0",
     "jsdom": "^24.0.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -46,9 +47,9 @@
       "mjs"
     ],
     "testMatch": [
-    "**/__tests__/**/*.mjs",
-    "**/?(*.)+(spec|test).mjs"
-  ],
+      "**/__tests__/**/*.mjs",
+      "**/?(*.)+(spec|test).mjs"
+    ],
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
     }
